@@ -15,6 +15,7 @@
     * 3963 FIX: check_mk_agent.linux: fixed strayed output of postfix status command
     * 3940 FIX: aix_hacmp_services: fixed broken check in case of agent section showing extra information before the "Status(...)" line...
     * 3941 FIX: zypper: fixed broken check for sections since agent OS SLES12...
+    * 4043 FIX: Add missing metric definition for 15 minute CPU load prediction'
 
     Multisite:
     * 3974 FIX: Sorting comments in hover menu of comments icon by time now
